<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Produtos01">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txtProdTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="35dp"
                android:paddingLeft="30dp"
                android:text="@string/strProdutos"
                android:textColor="@color/buttons"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="185dp"
                android:layout_height="184dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="70dp"
                android:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtProdTitulo" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView21"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/cadBack"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="160dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cadBack"
                    android:orientation="horizontal"></LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txtReais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="68dp"
                android:text="@string/strReais"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/txtValor"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView21" />

            <TextView
                android:id="@+id/txtValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/strValorRucula"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView21" />

            <TextView
                android:id="@+id/txtDiv"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/entradaDados"
                android:textColor="@color/entradaDados"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/txtRucula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="30dp"
                android:text="@string/strDescRuculaTitulo"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDiv" />

            <TextView
                android:id="@+id/txtDescRucula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/strDescRucula"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRucula" />

            <Button
                android:id="@+id/btnCarrinho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/buttons"
                android:text="Carrinho"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescRucula" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/MCardViewNav"

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBack"
        android:backgroundTint="@color/lightBack"
        app:cardBackgroundColor="@color/lightBack"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightBack"
            android:orientation="horizontal"></LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>